fixed some alignment issues + avatars still not showing up on profile page on apollostage stylesheets

--- a/static/styles/apollostage/style.css
+++ b/static/styles/apollostage/style.css
@@ -1439,6 +1439,11 @@ ul.collage_images li a>span {
 	float: none!important
 }
 
+#user .avatar_container img {
+	max-height: 400px;
+    max-width: 150px;
+}
+
 #user #userform {
 	background-color: transparent;
 	width: calc(100% - 248px);
@@ -1675,12 +1680,12 @@ blockquote {
 		margin: 4px;
 	}
 	#nav_staff {
-		font-weight: 400
+		font-weight: 400;
 	}
 	#menu>ul>#nav_staff {
 		position: absolute;
 		display: inline;
-		top: 26px;
+		top: 29px;
 		right: 8px
 	}
 
